--- a/template/vm/sql/sql.html
+++ b/template/vm/sql/sql.html
@@ -9,13 +9,17 @@
 
 -- 菜单 SQL
 insert into sys_menu (menu_name, parent_id, order_num, url, menu_type, visible, perms, icon, create_by, create_time, update_by, update_time, remark)
-values('{{.table.FunctionName}}', '4', '1', '/{{.table.ModuleName}}/{{.table.BusinessName}}', 'C', '0', '{{.table.BusinessName}}:view', '#', 'admin', '2020-01-01', 'admin', '2020-01-01', '{{.table.FunctionName}}菜单');
+values('{{.table.FunctionName}}', '4', '1', '/{{.table.ModuleName}}/{{.table.BusinessName}}', 'C', '0', '{{.table.ModuleName}}:{{.table.BusinessName}}:view', '#', 'admin', '2020-01-01', 'admin', '2020-01-01', '{{.table.FunctionName}}菜单');
 
 -- 按钮父菜单ID
 SELECT @parentId := LAST_INSERT_ID();
 
 -- 按钮 SQL
 insert into sys_menu  (menu_name, parent_id, order_num, url, menu_type, visible, perms, icon, create_by, create_time, update_by, update_time, remark)
+
+
+
+
 values('{{.table.FunctionName}}查询', @parentId, '1',  '#',  'F', '0', '{{.table.ModuleName}}:{{.table.BusinessName}}:list',         '#', 'admin', '2020-01-01', 'admin', '2020-01-01', '');
 
 insert into sys_menu  (menu_name, parent_id, order_num, url, menu_type, visible, perms, icon, create_by, create_time, update_by, update_time, remark)
