--- a/template/vm/go/router.html
+++ b/template/vm/go/router.html
@@ -19,7 +19,7 @@ func init() {
 	g1.POST("/list", "{{.table.ModuleName}}:{{.table.BusinessName}}:list", {{.table.BusinessName}}.ListAjax)
 	g1.GET("/add", "{{.table.ModuleName}}:{{.table.BusinessName}}:add", {{.table.BusinessName}}.Add)
 	g1.POST("/add", "{{.table.ModuleName}}:{{.table.BusinessName}}:add", {{.table.BusinessName}}.AddSave)
-	g1.POST("/remove", "{{.table.ModuleName}}:{{.table.BusinessName}}:remove", {{.table.BusinessName}}.Remove)
+	g1.GET("/remove", "{{.table.ModuleName}}:{{.table.BusinessName}}:remove", {{.table.BusinessName}}.Remove)
 	g1.GET("/edit", "{{.table.ModuleName}}:{{.table.BusinessName}}:edit", {{.table.BusinessName}}.Edit)
 	g1.POST("/edit", "{{.table.ModuleName}}:{{.table.BusinessName}}:edit", {{.table.BusinessName}}.EditSave)
 	g1.POST("/export", "{{.table.ModuleName}}:{{.table.BusinessName}}:export", {{.table.BusinessName}}.Export)
