--- a/template/module/rmp_file/edit.html
+++ b/template/module/rmp_file/edit.html
@@ -2,9 +2,9 @@
 <!--
 ==========================================================================
 云捷GO自动生成修改页面代码,只生成一次,按需修改.
-生成日期：2020-05-11 16:08:09
+生成日期：2020-05-18 17:22:57
 生成路径: template/module/rmp_file/edit.html
-生成人：yunjie
+生成人：张大方
 ==========================================================================
 -->
 <html lang="zh">
@@ -16,16 +16,9 @@
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-rmp_file-edit">
         <input name="Id" value="{{.rmp_file.Id}}" type="hidden">
-          
-            <div class="form-group">
-                <label class="col-sm-3 control-label">文件id：</label>
-                <div class="col-sm-8">
-                    <input name="id" value="{{.rmp_file.Id}}" class="form-control"  type="text" >
-                </div>
-            </div>
             
             <div class="form-group">
-                <label class="col-sm-3 control-label">类型名称：</label>
+                <label class="col-sm-3 control-label">文件名称：</label>
                 <div class="col-sm-8">
                     <input name="fileName" value="{{.rmp_file.FileName}}" class="form-control"  type="text" required>
                 </div>
@@ -46,6 +39,20 @@
                 </div>
             </div>     
             <div class="form-group">
+                <label class="col-sm-3 control-label">预览图片：</label>
+                <div class="col-sm-8">
+                    <input name="prevFilePic" value="{{.rmp_file.PrevFilePic}}" class="form-control"  type="text" >
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="col-sm-3 control-label">预览视频：</label>
+                <div class="col-sm-8">
+                    <input name="prevFileVideo" value="{{.rmp_file.PrevFileVideo}}" class="form-control"  type="text" >
+                </div>
+            </div>
+            
+            <div class="form-group">
                 <label class="col-sm-3 control-label">资源类型：</label>
                 <div class="col-sm-8">
                     <input name="rmpTypeId" value="{{.rmp_file.RmpTypeId}}" class="form-control"  type="text" >
@@ -65,7 +72,32 @@
                     <input name="pathId" value="{{.rmp_file.PathId}}" class="form-control"  type="text" >
                 </div>
             </div>
-                    
+              
+            <div class="form-group">
+                <label class="col-sm-3 control-label">是否为文件包（0不是 1是）：</label>
+                <div class="col-sm-8">
+                    {{getDictTypeRadio "sys_yes_no" "isPackage" "IsPackage"}}
+                </div>
+            </div>  
+            
+            <div class="form-group">
+                <label class="col-sm-3 control-label">父级文件id(文件包专用)：</label>
+                <div class="col-sm-8">
+                    <input name="parentId" value="{{.rmp_file.ParentId}}" class="form-control"  type="text" >
+                </div>
+            </div>
+              
+            <div class="form-group">
+                <label class="col-sm-3 control-label">文件状态（0正常 00000001自身停用, 00000010父级停用, 00000100分类停用, 00001000路径停用）：</label>
+                <div class="col-sm-8">
+                    <div class="radio-box">
+                        <input type="radio" name="status" value="" required>
+                        <label for="status" text="未知"></label>
+                    </div>
+                    <span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 代码生成请选择字典属性</span>
+                </div>
+            </div>  
+                      
             <div class="form-group">
                 <label class="col-sm-3 control-label">备注：</label>
                 <div class="col-sm-8">
@@ -88,7 +120,7 @@
             $.operate.save(prefix + "/edit", $('#form-rmp_file-edit').serialize());
         }
     }
-                                                    
+                                                                            
     
 </script>
 </body>
