--- a/template/module/rmp_type/listmetadata.html
+++ b/template/module/rmp_type/listmetadata.html
@@ -6,14 +6,35 @@
 <body class="gray-bg">
 <div class="container-div">
     <div class="row">
+        <div class="col-sm-12 search-collapse">
+            <p class="select-title">增加附属信息</p>
+            <form id="ordinary-form">
+                <div class="select-list">
+                    <ul>
+                        <li>
+                            名称：<input type="text" name="new_name" id="new_name"/>
+                        </li>
+                        <li>
+                            代码：<input type="text" name="new_code" id="new_code"/>
+                        </li>
+                        <li>
+                            备选值：<input type="text" name="new_values" id="new_values" placeholder="有备选值(以,分隔)"/>
+                        </li>
+                        <li>
+                            <a class="btn btn-primary btn-rounded btn-sm" onclick="insertRow()"><i class="fa fa-search"></i>&nbsp;添加</a>
+                            <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
+                        </li>
+                    </ul>
+                </div>
+            </form>
+        </div>
 
         <div class="btn-group-sm" id="toolbar" role="group">
-            {{getPermiButton .Session.uid "module:rmp_type:edit" "addMetadata()" "新增" "btn btn-success" "fa fa-plus"}}
-            {{getPermiButton .Session.uid "module:rmp_type:edit" "addMetadata()" "保存" "btn btn-success" "fa fa-plus"}}
+            {{getPermiButton .Session.uid "module:rmp_type:edit" "saveTable()" "保存" "btn btn-success" "fa fa-plus"}}
         </div>
 
         <div class="col-sm-12 select-table table-striped">
-            <p class="select-title">{{.name}}</p>
+            <p class="select-title">修改 {{.name}}类型 的附属属性</p>
             <table id="bootstrap-table"></table>
         </div>
     </div>
@@ -29,32 +50,68 @@
     var datas ={{.metadata}};
     var dataObj = datas;
     var prefix = ctx + "module/rmp_type";
-    var typeid = {{.type_id}}
+    var typeid = {{.type_id}};
+    var curCode = null;
     $(function () {
         var options = {
             url: prefix + "/getlistmetadata?id="+{{.type_id}},
             createUrl: prefix + "/addmetadata",
             modalName: "附属信息",
+            showSearch: false,
+            showRefresh: false,
+            showToggle: false,
+            showColumns: false,
+            showPageGo: false,
+            onClickRow: onClickRow,
+            uniqueId: "code",
+            onEditableSave:onEditableSave,
             columns: [
                 {
                     field: 'name',
                     title: '名称',
+
+                    editable : {
+                        type : 'text',
+                        title : '名称',
+                        emptytext : "【名称】为空",
+
+                        validate : function(value) {
+                            if (curCode != null)
+                            {
+                                for (var i = 0; i < datas.length; i++){
+                                    if (datas[i].code != curCode){
+                                        if (value == datas[i].name)
+                                        {
+                                            return '名称不能重复';
+                                        }
+                                    }
+                                }
+                            }
+                            if (value.length > 15) {
+                                return '名称不能超过15个字符';
+                            }
+                            if (value.length == 0) {
+                                return '名称不能为空';
+                            }
+                        }
+                    }
                 },
                 {
                     field: 'code',
-                    title: '代码(不可随便更改)',
+                    title: '代码(不可随意更改)'
                 },
                 {
                     field: 'values',
-                    title: '备选值'
+                    title: '备选值',
+                    editable: true
                 },
                 {
                     title: '操作',
                     align: 'center',
                     formatter: function (value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="editMetadata(\'' + row.code + '\')"><i class="fa fa-remove"></i>移除</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="delMetaData(\'' + row.code + '\')"><i class="fa fa-remove"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="removeRowByUniqueId(\'' + row.code + '\')"><i class="fa fa-remove"></i>移除</a> ');
+
                         return actions.join('');
                     }
                 }],
@@ -69,23 +126,41 @@
     });
 
     function insertRow(){
-        var randomId = 100 + ~~(Math.random() * 100)
+        var newName = $("#new_name").val();
+        var newCode = $("#new_code").val();
+        var newVaules = $("#new_values").val();
+
+        for (var i = 0; i < datas.length; i++){
+            if (datas[i].code == newCode){
+                $.model.errMsg("代码重复");
+                return;
+            }
+            if (datas[i].name == newName)
+            {
+                $.model.errMsg("名称重复");
+                return;
+            }
+        }
+
         $("#" + table.options.id).bootstrapTable('insertRow', {
             index: 0, // 你想插入到哪，0表示第一行
             row: {
-                userId: randomId,
-                userCode: 2000000 + randomId,
-                userName: '测试' + randomId,
-                userPhone: '1588888888',
-                userEmail: 'ry1@qq.com',
-                userBalance: 10 + randomId,
+                code: newCode,
+                name: newName,
+                values: newVaules
             }
         })
+        var addobj = new Object();
+        addobj.name = newName;
+        addobj.code = newCode;
+        addobj.values = newVaules;
+        datas.push(addobj);
+        aa = 0;
     }
 
     /* 删除指定表格行 */
     function removeRow(){
-        var ids = $.table.selectColumns("userId");
+        var ids = $.table.selectColumns("code");
         if (ids.length == 0) {
             $.modal.alertWarning("请至少选择一条记录");
             return;
@@ -118,9 +193,58 @@
     }
 
     function onClickRow(row, $element){
-        alert("单击行userId：" + row.userId + " userName：" + row.userName);
+        curCode = row.code;
     }
 
+
+    function onEditableSave (field, row, oldValue, $el) {
+        for (var i = 0; i < datas.length; i++){
+            if (datas[i].code == row['code']){
+                if (field == "name")
+                {
+                    datas[i].name = row[field]
+                }
+                else
+                {
+                    datas[i].name = row[field]
+                }
+                break;
+            }
+        }
+    }
+
+    function removeRowByUniqueId(code){
+        $("#" + table.options.id).bootstrapTable('removeByUniqueId', code)
+        for (var i = 0; i < datas.length; i++){
+            if (datas[i].code == code){
+                datas.splice(i,1);
+                break;
+            }
+        }
+    }
+
+    function saveTable()
+    {
+        var jsonSend = JSON.stringify(datas);
+        var url = prefix+"/modifymetadata?id="+typeid;
+
+        $.ajax({
+            url:url,
+            data: {metadata:jsonSend},
+            type: "post",
+            contentType: "application/json", //必须有
+            success: function (result) {
+                 if (result.code == 0){
+                     $.modal.alertSuccess("更新成功");
+                     $.modal.closeTab();
+                 }
+                 else
+                 {
+                     $.modal.errMsg("更新失败");
+                 }
+            }
+        })
+    }
 
 </script>
 </body>
